package fr.ensma.a3.ia.jeupersonnages.elements;

public interface IElementJeu {
    @Override
    String toString();
}
