package fr.ensma.a3.ia.jeupersonnages.elements.comportement;

/**
 * Typage selon la fonctionnalité de déplacement.
 *
 * @author M. Richard
 * @since 1.0
 * @version 1.0
 */
public interface IDeplacable {
    /**
     * Provoque un déplacement.
     */
    void deplacer();
}
